--- a/index.html
+++ b/index.html
@@ -3,59 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio - Ecommerce de Libros</title>
+    <title>Tu Tienda de Libros</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>Mi Librería Online</h1>
+            <h1>Tu Tienda de Libros</h1>
             <nav>
                 <ul>
                     <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Tienda</a></li>
+                    <li><a href="#">Libros</a></li>
                     <li><a href="#">Contacto</a></li>
-                    <li><a href="#">Mi Cuenta</a></li>
-                    <li><a href="#">Carrito</a></li>
                 </ul>
             </nav>
         </div>
     </header>
     <main>
-        <section class="hero">
-            <div class="container">
-                <h2>Encuentra tu próximo libro favorito</h2>
-                <p>Explora nuestras colecciones y disfruta de ofertas exclusivas.</p>
-                <a href="#" class="btn">Explorar ahora</a>
-            </div>
-        </section>
-        <section class="featured-books">
-            <div class="container">
-                <h2>Libros Destacados</h2>
-                <div class="book-list">
-                    <!-- Ejemplo de libro -->
-                    <div class="book">
-                        <img src="book1.jpg" alt="Título del Libro">
-                        <h3>Título del Libro</h3>
-                        <p>Autor del Libro</p>
-                        <p>$19.99</p>
-                        <a href="#" class="btn">Agregar al carrito</a>
-                    </div>
-                    <!-- Agrega más libros aquí -->
-                    <div class="book">
-                        <img src="book2.jpg" alt="Título del Libro">
-                        <h3>Otro Libro</h3>
-                        <p>Autor del Libro</p>
-                        <p>$29.99</p>
-                        <a href="#" class="btn">Agregar al carrito</a>
-                    </div>
-                </div>
-            </div>
-        </section>
+        <div class="container">
+            <section class="hero">
+                <h2>Descubre los Mejores Libros</h2>
+                <p>Encuentra una amplia variedad de libros para todos los gustos.</p>
+            </section>
+            <section class="books">
+                <article>
+                    <h3>Libro 1</h3>
+                    <p>Descripción del libro 1.</p>
+                </article>
+                <article>
+                    <h3>Libro 2</h3>
+                    <p>Descripción del libro 2.</p>
+                </article>
+                <article>
+                    <h3>Libro 3</h3>
+                    <p>Descripción del libro 3.</p>
+                </article>
+            </section>
+        </div>
     </main>
     <footer>
         <div class="container">
-            <p>&copy; 2024 Mi Librería Online. Todos los derechos reservados.</p>
+            <p>&copy; 2024 Tu Tienda de Libros. Todos los derechos reservados.</p>
         </div>
     </footer>
 </body>
